# ChangeLog for xfce-base/exo
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/exo/ChangeLog,v 1.28 2010/03/11 21:10:01 ranger Exp $

  11 Mar 2010; Brent Baude <ranger@gentoo.org> exo-0.3.106.ebuild:
  Marking exo-0.3.106 ppc64 stable for bug 305657

  01 Mar 2010; Raúl Porcel <armin76@gentoo.org> exo-0.3.106.ebuild:
  alpha/arm/ia64/sparc stable wrt #305657

  28 Feb 2010; nixnut <nixnut@gentoo.org> exo-0.3.106.ebuild:
  ppc stable #305657

  22 Feb 2010; Christian Faulhammer <fauli@gentoo.org> exo-0.3.106.ebuild:
  stable x86, bug 305657

  19 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> exo-0.3.106.ebuild:
  amd64 stable wrt #305657

*exo-0.3.106 (23 Jan 2010)

  23 Jan 2010; Christoph Mende <angelos@gentoo.org> +exo-0.3.106.ebuild:
  Version bump

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> exo-0.3.105-r1.ebuild:
  Stable for HPPA (bug #289179).

  03 Dec 2009; Brent Baude <ranger@gentoo.org> exo-0.3.105-r1.ebuild:
  Marking exo-0.3.105-r1 ppc64 stable for bug 289179

  30 Nov 2009; Raúl Porcel <armin76@gentoo.org> exo-0.3.105-r1.ebuild:
  alpha/ia64/sparc stable wrt #289179

  09 Nov 2009; Markus Meier <maekke@gentoo.org> exo-0.3.105-r1.ebuild:
  arm stable, bug #289179

  24 Oct 2009; nixnut <nixnut@gentoo.org> exo-0.3.105-r1.ebuild:
  ppc stable #289179

*exo-0.5.1 (24 Oct 2009)

  24 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> +exo-0.5.1.ebuild:
  Version bump.

*exo-0.3.105-r1 (21 Oct 2009)

  21 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  +exo-0.3.105-r1.ebuild, +files/exo-0.3.105-sync.patch:
  Revision bump for upstream patch: Avoid sync mount option with USB storage
  wrt #289972.

  20 Oct 2009; Christian Faulhammer <fauli@gentoo.org> exo-0.3.105.ebuild:
  stable x86, bug 289179

*exo-0.3.105 (19 Oct 2009)

  19 Oct 2009; Jeremy Olexa <darkside@gentoo.org> +exo-0.3.105.ebuild:
  Version bump for small bug fixes, including reading mount options from an
  rc file
