@@ -2,9 +2,9 @@ AUX exo-0.3.105-sync.patch 871 RMD160 1e75a279b28e75ab07895507ef51a764838e69a5 S
 AUX exo-0.3.4-interix.patch 2766 RMD160 876452cf6009fb1530cf0f296104ba4105dc10de SHA1 8ad881d9cca3811fba0b1a7080caed024e37381b SHA256 e7a5864241cbae1ac1442af31aea2b3365e9936740954e06a45e4da7e810e471
 DIST exo-0.3.105.tar.bz2 1738813 RMD160 3744e3fe37fbc425f209ec5580de437c2be3578a SHA1 2f424cf473ff834b2208a436061af75c6c6b80a9 SHA256 278f702d890c89bd3923ce1bdaf29bd9f2c800c2e4cfd9e902d99663bba337e5
 DIST exo-0.3.106.tar.bz2 1732898 RMD160 eaac845d16ea4bab64634faa34831bc570ed56d9 SHA1 152a395e3b01d7280b37966085fa57a651c6f3f8 SHA256 0b9b8625eb27896402d2a4f219dfb92ac9a1fe1f3e7367709f87fc866f1c02d9
-DIST exo-0.5.1.tar.bz2 1738974 RMD160 cdf07fc0e92434cb6e416ee190c5fcc33cb4d679 SHA1 d998246eb437ffdb0f2118014b8d46378973fdb5 SHA256 3f9c5a73c771765092e2ad569c7f9dfd94b6149e73845501c4eee8e30162b082
+DIST exo-0.5.2.tar.bz2 1870877 RMD160 b1c5882188f77de1406fdb1fd5bda43093bd6f88 SHA1 d37e1785b9c649aab6856c6da4b50095dbcd1fdf SHA256 1136308ff6bb6807195938085fac29a151990d0c6713dbe914ad777aa696d2aa
 EBUILD exo-0.3.105-r1.ebuild 1577 RMD160 5280117b197962ba565d15ac0d892e75bd948ea2 SHA1 eb38315c6b2860ca83c786621a6cd42cc1dd42eb SHA256 3513078839eddc947aa49f9b54afe54ab297fb80e3f931e98a17f2657d838204
 EBUILD exo-0.3.106.ebuild 1546 RMD160 3273760a4d0300af12e9ad7ab7b92b1f67de10ef SHA1 b5b5b591ae525e580ecdf60c1e068db993e33834 SHA256 a9db9919ed261befc39693e0ecdbfcd82c05ce7cc04ef1ccc5a867611f2bc1ca
-EBUILD exo-0.5.1.ebuild 1580 RMD160 e76cdb2fdae68b49983bf5f1a3308bdd3d30ffe3 SHA1 3348d380c1f1f67e8e56b2f1a2aa51db2f4de4b3 SHA256 2cae12a4ee45c7a2ef5ca1f0c52728208a89e790bf2ce47ad8710562222c842a
-MISC ChangeLog 4035 RMD160 ac6a1db5670472f99b6cc95e5b9d1fdd1424c80f SHA1 47ce4e83cc97b36d29b26eb5c5db0cae0bf947f7 SHA256 0a84cc69582a5f3fc112359a81682c2a73aa7e3ddcf173d5df4d14cd0d054862
+EBUILD exo-0.5.2.ebuild 1627 RMD160 28a75e4e18fc1a128f50e5a54e55019976a23196 SHA1 069de30f3c3ab729dc00c56a31c46438e7c7b102 SHA256 42418a3edb2a484b995a20c997df4c398e7ca0dc88f774d57d5a099529827aeb
+MISC ChangeLog 4154 RMD160 bd49d111195cf988fe246c7aed470c368b274927 SHA1 2840d3d77a72123bfe8cf8223019e5a0f9ef98ca SHA256 1f33d96fc0500115dce10635b3ba2e579fdc4d642c1481c9185396c076c5e287
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
