@@ -1,6 +1,11 @@
 # ChangeLog for xfce-base/exo
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/exo/ChangeLog,v 1.28 2010/03/11 21:10:01 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/exo/ChangeLog,v 1.29 2010/03/21 18:50:20 ssuominen Exp $
+
+*exo-0.5.2 (21 Mar 2010)
+
+  21 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> +exo-0.5.2.ebuild:
+  Version bump.
 
   11 Mar 2010; Brent Baude <ranger@gentoo.org> exo-0.3.106.ebuild:
   Marking exo-0.3.106 ppc64 stable for bug 305657
